# conceal

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp
include/conceal/: conceal.hpp
test/: CMakeLists.txt  test_main.cpp
